refactored some code

--- a/src/public/playground.html
+++ b/src/public/playground.html
@@ -13,7 +13,8 @@
         <div class="header-content">
             <div class="flex-box">
                 <div class="brand">
-                    <img src="https://static.vecteezy.com/system/resources/thumbnails/024/553/534/small/lion-head-logo-mascot-wildlife-animal-illustration-generative-ai-png.png" alt="Logo" class="logo">
+                    <img src="https://static.vecteezy.com/system/resources/thumbnails/024/553/534/small/lion-head-logo-mascot-wildlife-animal-illustration-generative-ai-png.png"
+                        alt="Logo" class="logo">
                     <h3 class="name">outport</h3>
                 </div>
                 <a class="primary-button" href="javascript:window.history.back();">
@@ -34,16 +35,20 @@
                         <option value="patch">PATCH</option>
                         <option value="delete">DELETE</option>
                     </select>
-                    <input class="playground-url-input" type="text" id="playground-url-input" placeholder="Enter URL or paste text">
+                    <input class="playground-url-input" type="text" id="playground-url-input"
+                        placeholder="Enter URL or paste text">
                 </div>
-                <button class="primary-button" onclick="testApi()">Send</button>
+                <button class="primary-button" onclick="sendRequest()">Send</button>
             </div>
 
             <div class="dull-card">
                 <div class="tabs" id="playground_request_header_tabs">
-                    <div id="playground_request_parameters_tab" class="tab active" onclick="showTab('playground', 'request_header', 'request_parameters')">Parameters</div>
-                    <div id="playground_request_headers_tab" class="tab" onclick="showTab('playground', 'request_header', 'request_headers')">Headers</div>
-                    <div id="playground_request_body_tab" class="tab" onclick="showTab('playground', 'request_header', 'request_body')">Body</div>
+                    <div id="playground_request_parameters_tab" class="tab active"
+                        onclick="showTab('playground', 'request_header', 'request_parameters')">Parameters</div>
+                    <div id="playground_request_headers_tab" class="tab"
+                        onclick="showTab('playground', 'request_header', 'request_headers')">Headers</div>
+                    <div id="playground_request_body_tab" class="tab"
+                        onclick="showTab('playground', 'request_header', 'request_body')">Body</div>
                 </div>
 
                 <div id="playground_request_header_content" class="request-content">
@@ -57,10 +62,12 @@
                             </thead>
                             <tbody>
                                 <tr class="data-row">
-                                    <td class="data-cell"><input class="param-cell-input border-background-non" placeholder="key" name="key"></td>
+                                    <td class="data-cell"><input class="param-cell-input border-background-non"
+                                            placeholder="key" name="key"></td>
                                     <td class="data-cell">
                                         <div class="flex-box">
-                                            <input class="param-cell-input border-background-non" placeholder="value" name="value">
+                                            <input class="param-cell-input border-background-non" placeholder="value"
+                                                name="value">
                                             <h6 class="delete-text-btn" onclick="deleteRow(this)">delete</h6>
                                         </div>
                                     </td>
@@ -80,10 +87,12 @@
                             </thead>
                             <tbody>
                                 <tr class="data-row">
-                                    <td class="data-cell"><input class="param-cell-input border-background-non" placeholder="key" name="key"></td>
+                                    <td class="data-cell"><input class="param-cell-input border-background-non"
+                                            placeholder="key" name="key"></td>
                                     <td class="data-cell">
                                         <div class="flex-box">
-                                            <input class="param-cell-input border-background-non" placeholder="value" name="value">
+                                            <input class="param-cell-input border-background-non" placeholder="value"
+                                                name="value">
                                             <h6 class="delete-text-btn" onclick="deleteRow(this)">delete</h6>
                                         </div>
                                     </td>
@@ -101,7 +110,9 @@
                             </select>
                         </div>
                         <div id="request_body_json">
-                            <textarea id="playground_json_input_body" onKeyUp="setupFormateJsonInterval('playground_json_input_body')" class="body-input" rows="10" cols="50" placeholder='{"key": "value"}' name='awesome'>{}</textarea>
+                            <textarea id="playground_json_input_body"
+                                onKeyUp="setupFormateJsonInterval('playground_json_input_body')" class="body-input"
+                                rows="10" cols="50" placeholder='{"key": "value"}' name='awesome'>{}</textarea>
                         </div>
                         <div id="request_body_form" class="mt-2" style="display: none;">
                             <table class="table" id="bodyTable">
@@ -115,8 +126,10 @@
                                     <tr class="data-row">
                                         <td class="data-cell">
                                             <div class="flex-box">
-                                                <input class="param-cell-input border-background-non" placeholder="key" name="key">
-                                                <select class="border-background-non" onchange="changeBodyFormInputType(this)">
+                                                <input class="param-cell-input border-background-non" placeholder="key"
+                                                    name="key">
+                                                <select class="border-background-non"
+                                                    onchange="changeBodyFormInputType(this)">
                                                     <option value="text">TEXT</option>
                                                     <option value="file">FILE</option>
                                                 </select>
@@ -124,7 +137,8 @@
                                         </td>
                                         <td class="data-cell">
                                             <div class="flex-box">
-                                                <input type="text" class="param-cell-input border-background-non" placeholder="value" accept="image/*">
+                                                <input type="text" class="param-cell-input border-background-non"
+                                                    placeholder="value" accept="image/*">
                                                 <h6 class="delete-text-btn" onclick="deleteRow(this)">delete</h6>
                                             </div>
                                         </td>
@@ -146,154 +160,18 @@
                 </div>
             </div>
         </section>
+        <!-- Toast message component -->
+        <div id="toast" class="toast-container">
+            <p id="toast-text"></p>
+            <button class="toast-close" onclick="hideToast()">✖</button>
+        </div>
+
     </main>
 
+    <script src="./utils.js"></script>
     <script src="./index.js"></script>
-    <script>
-        // Element references
-        const selectElement = document.getElementById('playground_request_body_type');
-        const jsonDiv = document.getElementById('request_body_json');
-        const formDiv = document.getElementById('request_body_form');
-        const parametersTable = document.getElementById("parametersTable");
-        const urlInput = document.getElementById("playground-url-input");
-
-        // Initial setup
-        jsonDiv.style.display = 'block';
-
-        // Change request body type
-        selectElement.addEventListener('change', toggleRequestBodyType);
-
-        function toggleRequestBodyType() {
-            const isJson = selectElement.value === 'json';
-            jsonDiv.style.display = isJson ? 'block' : 'none';
-            formDiv.style.display = isJson ? 'none' : 'block';
-        }
-
-        function changeBodyFormInputType(selectElement) {
-            const inputField = selectElement.closest('td').nextElementSibling.querySelector('input');
-            inputField.type = selectElement.value;
-        }
-
-        function addRowWithQueryParamListeners() {
-            addRow("parametersTable");
-            initializeRealTimeURLUpdate();
-        }
-
-        function addRow(tableId) {
-            const tableBody = document.querySelector(`#${tableId} tbody`);
-            const newRow = document.createElement('tr');
-            newRow.classList.add('data-row');
-            newRow.innerHTML = `
-                <td class="data-cell"><input class="param-cell-input border-background-non" placeholder="key" name="key"></td>
-                <td class="data-cell">
-                    <div class="flex-box">
-                        <input class="param-cell-input border-background-non" placeholder="value" name="value">
-                        <h6 class="delete-text-btn" onclick="deleteRow(this)">delete</h6>
-                    </div>
-                </td>`;
-            tableBody.appendChild(newRow);
-        }
-
-        function addReqBodyRow() {
-            const tableBody = document.querySelector(`#bodyTable tbody`);
-            const newRow = document.createElement('tr');
-            newRow.classList.add('data-row');
-            newRow.innerHTML = `
-                <td class="data-cell">
-                    <div class="flex-box">
-                        <input class="param-cell-input border-background-non" placeholder="key" name="key">
-                        <select class="border-background-non" onchange="changeBodyFormInputType(this)">
-                            <option value="text">TEXT</option>
-                            <option value="file">FILE</option>
-                        </select>
-                    </div>
-                </td>
-                <td class="data-cell">
-                    <div class="flex-box">
-                        <input type="text" class="param-cell-input border-background-non" placeholder="value" accept="image/*">
-                        <h6 class="delete-text-btn" onclick="deleteRow(this)">delete</h6>
-                    </div>
-                </td>`;
-            tableBody.appendChild(newRow);
-        }
-
-        function deleteRow(element) {
-            element.closest('tr').remove();
-            updateURL();
-        }
-
-        function testApi() {
-            const url = urlInput.value;
-            const method = document.getElementById("playground-method-selector").value;
-            execute('playground', url, method);
-        }
-
-        function initializeRealTimeURLUpdate() {
-            initializeInputListeners(parametersTable);
-        }
-
-        function initializeInputListeners(parametersTable) {
-            const keyInputs = parametersTable.querySelectorAll('input[name="key"]');
-            const valueInputs = parametersTable.querySelectorAll('input[name="value"]');
-
-            keyInputs.forEach(input => input.addEventListener("input", updateURL));
-            valueInputs.forEach(input => input.addEventListener("input", updateURL));
-        }
-
-        function updateURL() {
-            let baseUrl = urlInput.getAttribute("data-base-url") || urlInput.value.split("?")[0];
-            urlInput.setAttribute("data-base-url", baseUrl);  // Store the original base URL
-
-            const queryParams = [];
-            const rows = parametersTable.querySelectorAll("tr.data-row");
-
-            rows.forEach(row => {
-                const key = row.querySelector('input[name="key"]').value;
-                const value = row.querySelector('input[name="value"]').value;
-                if (key && value) {
-                    queryParams.push(`${encodeURIComponent(key)}=${encodeURIComponent(value)}`);
-                }
-            });
-
-            const queryString = queryParams.length > 0 ? `?${queryParams.join("&")}` : "";
-            urlInput.value = baseUrl + queryString;
-        }
-
-        // Add event listener to URL input to sync the table in real-time
-        urlInput.addEventListener("input", syncTableWithURL);
-
-        // Synchronize the parameters table with the current URL input
-        function syncTableWithURL() {
-            const url = new URL(urlInput.value, window.location.origin);
-            const params = new URLSearchParams(url.search);
-
-            // Clear existing rows in the parameters table
-            parametersTable.querySelector("tbody").innerHTML = "";
-
-            // Populate table with parameters from the URL
-            params.forEach((value, key) => {
-                const newRow = parametersTable.querySelector("tbody").insertRow();
-                newRow.classList.add("data-row");
-                newRow.innerHTML = `
-                    <td class="data-cell"><input class="param-cell-input border-background-non" placeholder="key" value="${decodeURIComponent(key)}" name="key"></td>
-                    <td class="data-cell">
-                        <div class="flex-box">
-                            <input class="param-cell-input border-background-non" placeholder="value" value="${decodeURIComponent(value)}" name="value">
-                            <h6 class="delete-text-btn" onclick="deleteRow(this)">delete</h6>
-                        </div>
-                    </td>`;
-            });
-
-            if (params.size === 0) {
-                addRowWithQueryParamListeners();
-            }
-
-            // Reinitialize listeners for the new inputs
-            initializeInputListeners(parametersTable);
-        }
-
-        initializeRealTimeURLUpdate();
-    </script>
+    <script src="./httpClient.js"></script>
+    <script src="./playground.js"></script>
 </body>
 
 </html>
