folder structure updated

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -19,7 +19,7 @@
                 </div>
 
                 <div>
-                    <a class="primary-button" href="playground.html">Playground</a>
+                    <a class="primary-button" href="playground">Playground</a>
                 </div>
             </div>
             <div class="title-container">
@@ -69,10 +69,9 @@
 
     <script type="module" src="./outport-des-init.js"></script>
     <script type="module" src="./render-content.js"></script>
-    <script src="./home.js"></script>
-    <script src="./utils.js"></script>
-    <script src="./httpClient.js"></script>
     <script src="./index.js"></script>
+    <script src="./utils.js"></script>
+    <script src="./services/httpClient.js"></script>
     
 
 
