--- a/src/public/playground/index.html
+++ b/src/public/playground/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test API Documentation</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../index.css">
 </head>
 
 <body>
@@ -168,10 +168,9 @@
 
     </main>
 
-    <script src="./utils.js"></script>
-    <script src="./index.js"></script>
-    <script src="./httpClient.js"></script>
+    <script src="../utils.js"></script>
     <script src="./playground.js"></script>
+    <script src="../services/httpClient.js"></script>
 </body>
 
 </html>
