--- a/src/public/playground/index.html
+++ b/src/public/playground/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test API Documentation</title>
+    <title>Outport Playground</title>
+    <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
     <link rel="stylesheet" href="../index.css">
 </head>
 
@@ -13,7 +14,7 @@
         <div class="header-content">
             <div class="flex-box">
                 <div class="brand">
-                    <img src="https://static.vecteezy.com/system/resources/thumbnails/024/553/534/small/lion-head-logo-mascot-wildlife-animal-illustration-generative-ai-png.png"
+                    <img src="../assets/outport.png"
                         alt="Logo" class="logo">
                     <h3 class="name">outport</h3>
                 </div>
