--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,8 +14,7 @@
         <div class="header-content">
             <div class="flex-box">
                 <div class="brand">
-                    <img src="./assets/outport.png"
-                        alt="Logo" class="logo">
+                    <img src="./assets/outport.png" alt="Logo" class="logo">
                     <h3 class="name">outport</h3>
                 </div>
 
@@ -73,9 +72,6 @@
     <script src="./index.js"></script>
     <script src="./utils.js"></script>
     <script src="./services/httpClient.js"></script>
-    
-
-
 </body>
 
 </html>
