copy api response to json form is completed

--- a/src/public/playground/index.html
+++ b/src/public/playground/index.html
@@ -193,7 +193,7 @@
                                 </div>
                             </div>
                             <div id="playground_response_headers_content" class="tab-content response-headers">
-                                <table class="table whiteBorder">
+                                <table id="responseHeadersTable" class="table whiteBorder">
                                     <thead>
                                         <tr>
                                             <th class="header-cell whiteBorder">Key</th>
